--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+/* responsive devices  */
+/* 1528 */
+/* Smallocation-input-search*/
+/* @media (max-width: 768px) {
+  .main-container {
+    width: 750px;
+  }
+  .choose-country-section,
+  .inspiration-section,
+  .popular-hotels-section {
+    flex-wrap: wrap;
+  }
+  .search-place-nav {
+    width: 280px;
+  }
+} */
+
+/* width: 1046.8px; */
+/* Medium */
+/* @media (max-width: 992px) {
+  .main-container {
+    width: 970px;
+  }
+  .choose-country-section,
+  .inspiration-section,
+  .popular-hotels-section {
+    flex-wrap: wrap;
+  }
+  .search-place-nav {
+    width: 500px;
+  }
+} */
+/* Large */
+
+/* end of responsive */
+
+/* navigation bar styling */
+
 :root {
   --mainColor: #2f80ed;
   --textColor: #333;
@@ -33,8 +71,8 @@ h4 {
 
 .main-container {
   /* to make padding works even in mobile size screens */
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
   /* to set all elements in the center verticlly */
   margin-right: auto;
   margin-left: auto;
@@ -42,6 +80,11 @@ h4 {
   width: calc(100% - 200px);
 }
 
+@media (max-width: 900px) {
+  .main-container {
+    width: 100%;
+  }
+}
 /* navigation bar styling */
 .nav-logo {
   position: relative;
@@ -102,16 +145,163 @@ a {
   align-items: center;
   margin-bottom: 12px;
 }
+@media (max-width: 1017px) {
+  .nav-links {
+    display: none;
+  }
+  .nav-logo {
+    left: 30px;
+  }
+}
 
+.sidebar {
+  position: absolute;
+  height: 100vh;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  background-color: white;
+  transition: 600ms;
+  transform: translate(-100%);
+  z-index: 1;
+}
+.sidebar-container {
+  position: relative;
+  display: none;
+}
+.sidebar-burger-menu {
+  font-size: 24px;
+  border-radius: 0;
+  color: var(--lightGrayText);
+  margin-top: 17px;
+  /* display: none;  */
+}
+@media (min-width: 1017px) {
+  .sidebar-burger-menu {
+    display: none;
+  }
+}
+
+.left-arrow,
+.right-arrow,
+.surprise,
+.close-btn,
+.sidebar-burger-menu {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  position: absolute;
+}
+
+.sidebar-burger-menu:hover {
+  color: var(--mainColor);
+  cursor: pointer;
+}
+.show-sidebar {
+  transform: translate(0);
+}
+.show-sidebar-container {
+  display: block;
+}
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+  color: rgb(206, 14, 14);
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
+}
+.close-btn:hover {
+  transform: rotate(360deg);
+  transition: 1000ms;
+  cursor: pointer;
+}
+.home-sidebar,
+.discover-sidebar,
+.activties-sidebar,
+.about-sidebar,
+.contact-sidebar,
+.register-sidebar,
+.sign-in-sidebar {
+  position: absolute;
+  top: 100px;
+  left: 0px;
+  height: 50px;
+  width: 350px;
+  list-style: none;
+}
+.home,
+.discover,
+.activties,
+.about,
+.contact,
+.register,
+.sign-in {
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 50px;
+  text-decoration: none;
+}
+.home,
+.discover,
+.activties,
+.about,
+.contact {
+  color: var(--lightGrayText);
+}
+
+.register,
+.sign-in {
+  color: var(--mainColor);
+}
+
+.discover-sidebar {
+  top: 150px;
+}
+.activties-sidebar {
+  top: 210px;
+}
+.about-sidebar {
+  top: 260px;
+}
+.contact-sidebar {
+  top: 310px;
+}
+.register-sidebar {
+  top: 360px;
+  display: none;
+}
+.sign-in-sidebar {
+  top: 410px;
+  display: none;
+}
+@media (max-width: 500px) {
+  .sign-in-sidebar,
+  .register-sidebar {
+    display: block;
+  }
+  .sign-in-btn,
+  .register-btn {
+    display: none;
+  }
+  .nav-logo {
+    right: 0;
+  }
+}
+/* start of banner */
 .banner-section {
+  position: relative;
   background-image: url(imgs/banner2.png);
-  background-size: contain;
+  background-size: cover;
   background-repeat: round;
   height: 500px;
   border-radius: 10px;
-  position: relative;
 }
-
 .overlay {
   position: absolute;
   left: 0;
@@ -125,21 +315,33 @@ a {
 .banner-section h1 {
   position: absolute;
   color: var(--whiteColor);
-  right: 50%;
+  left: 50%;
   top: 180px;
-  transform: translate(50%, -50%);
+  transform: translate(-50%, -50%);
   margin: 0;
   padding: 0;
   font-size: 32px;
   line-height: normal;
+  width: 373px;
 }
-.banner-section p {
+/* .title-banner{
+  position: absolute;
+  color: var(--whiteColor);
+  left: 50%;
+  top: 180px;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  font-size: 32px;
+  line-height: normal;
+  width: 373px;
+  font-weight:bold; */
+/* display: none; */
+/* } */
+.banner-qoute {
   font-size: 20px;
   width: 650px;
   line-height: 140%;
-}
-
-.banner-qoute {
   position: absolute;
   font: 20px;
   color: var(--whiteColor);
@@ -153,26 +355,124 @@ a {
   margin: 0;
 }
 
+@media (max-width: 900px) {
+  .banner-qoute {
+    top: 160px;
+    width: 60%;
+    font-size: 20px;
+    top: 200px;
+  }
+  .banner-section h1 {
+    top: 92px;
+    font-size: 26px;
+    left: 55%;
+  }
+}
+@media (max-width: 450px) {
+  .banner-section {
+    height: 300px;
+  }
+  .banner-qoute {
+    width: 80%;
+    font-size: 16px;
+    top: 55%;
+  }
+  .banner-section h1 {
+    font-size: 20px;
+    width: 236px;
+  }
+}
 .search-place-nav {
-  position: absolute;
-  width: 1072.8px;
+  position: relative;
+  /* width: 1072.8px; */
   height: 64px;
   flex-shrink: 0;
   border-radius: 8px;
   background: var(--whiteColor);
   box-shadow: 0px 4px 37px 0px rgba(0, 0, 0, 0.15);
-  left: 50%;
-  top: 500px;
-  transform: translate(-50%, -50%);
+  /* margin-left: 50%; */
+  /* transform:translate(-50%,0%); */
+  margin-top: -32px;
+  /* display: none; */
 }
-
+.search-place-nav-responsive {
+  position: relative;
+  width: 324px;
+  height: 345px;
+  border-radius: 8px;
+  background: var(--whiteColor);
+  box-shadow: 0px 4px 37px 0px rgba(0, 0, 0, 0.15);
+  margin-left: 50%;
+  transform: translate(-50%, 0%);
+  margin-top: -80px;
+  display: none;
+}
+.search-place-form-responsive {
+  position: absolute;
+  display: flex;
+  gap: -5px;
+  flex-direction: column;
+  align-items: center;
+  width: calc(100% - 30px);
+  right: 50%;
+  top: 50%;
+  transform: translate(50%, -50%);
+}
+.search-nav-container {
+  margin-right: auto;
+  margin-left: auto;
+  width: calc(100% - 200px);
+}
+.search-nav-container2 {
+  margin-right: auto;
+  margin-left: auto;
+  width: calc(100% - 500px);
+}
 .search-place-form {
   position: absolute;
   display: flex;
   justify-content: space-between;
-  width: 1046.8px;
-  left: 0;
-  top: 11px;
+  width: calc(100% - 30px);
+  right: 50%;
+  top: 50%;
+  transform: translate(50%, -50%);
+}
+@media (max-width: 1500px) {
+  .search-place-form input {
+    width: 90%;
+  }
+}
+@media (max-width: 1075px) {
+  .search-place-form input {
+    width: 80%;
+  }
+  .search-nav-container {
+    width: 100%;
+  }
+  .search-place-form p {
+    font-size: 8px;
+  }
+}
+@media (max-width: 900px) {
+  .search-place-nav {
+    display: none;
+  }
+  .search-place-nav-responsive {
+    display: block;
+  }
+}
+@media (max-width: 450px) {
+  .search-place-nav-responsive {
+    width: 250px;
+    height: 250px;
+  }
+  .search-place-form-responsive input {
+    width: 120px;
+    height: 20px;
+  }
+  .search-place-form-responsive {
+    gap: -20px;
+  }
 }
 
 .search-nav-btn {
@@ -193,7 +493,6 @@ a {
   font-weight: 600;
 }
 
-
 .location-input-search,
 .check-in-input-search,
 .check-out-input-search,
@@ -204,8 +503,8 @@ a {
   border-radius: 4px;
   background: var(--Gray-6, #f2f2f2);
   color: var(--lightGrayText);
-  left: 10px;
-  top: 1px;
+  /* left: 10px; */
+  /* top: 1px; */
   border-radius: 4px;
   border-color: transparent;
 }
@@ -225,12 +524,6 @@ a {
   width: 210px;
 }
 
-.icon-location {
-  position: relative;
-  left: 0px;
-  top: 0;
-}
-
 .covid-restrictions-warning {
   position: relative;
   height: 72px;
@@ -239,7 +532,11 @@ a {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-
+@media (max-width: 450px) {
+  .covid-restrictions-warning {
+    height: 100px;
+  }
+}
 .warning-covid-icon {
   position: absolute;
   top: 20px;
@@ -273,10 +570,24 @@ a {
   font-weight: 500;
   width: 638px;
 }
-
-.choose-country-section-article {
+@media (max-width: 685px) {
+  .section1-enjoy-vacation p {
+    width: 500px;
+    line-height: 150%;
+  }
+}
+.choose-country-section {
+  display: flex;
+  justify-content: space-between;
   margin-top: 30px;
   margin-bottom: 60px;
+  flex-wrap: wrap;
+
+  /* flex-shrink: 3; */
+}
+.choose-country-section-article {
+  margin-top: 20px;
+  margin-right: 10px;
 }
 
 .choose-country-section-article-img {
@@ -297,15 +608,17 @@ a {
   color: var(--headingTextColor);
   font-weight: 500;
 }
-
-.choose-country-section {
-  display: flex;
-  justify-content: space-between;
+@media (max-width: 685px) and (min-width: 550px) {
+  .choose-country-section-article-img {
+    width: 430px;
+    height: 350px;
+  }
 }
 
 .inspiration-section {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-left: 0px;
   margin-bottom: 60px;
 }
@@ -331,23 +644,28 @@ a {
   width: 413px;
   height: 280px;
   flex-shrink: 0;
+  margin-top: 20px;
+  margin-right: 10px;
   border-radius: 8px;
   background-size: cover;
 }
+
 .inspiration-article1,
 .inspiration-article2,
 .inspiration-article3 .overlay {
   border-radius: 8px;
 }
-
 .inspiration-section h2 {
+  top: 50%;
+}
+.inspiration-section h2 {
+  position: absolute;
+  bottom: 72px;
+  left: 20px;
   color: var(--whiteColor);
   font-size: 20px;
   font-weight: 500;
   line-height: normal;
-  top: 182px;
-  left: 20px;
-  width: 360px;
 }
 
 .inspiration-section p {
@@ -359,17 +677,36 @@ a {
   top: 216px;
   left: 20px;
 }
-
-.h2-inspiration {
-  position: absolute;
-  bottom: 72px;
-  left: 20px;
+@media (max-width: 685px) and (min-width: 550px) {
+  .inspiration-article1,
+  .inspiration-article2,
+  .inspiration-article3 {
+    width: 473px;
+    height: 340px;
+  }
+}
+@media (max-width: 450px) {
+  .inspiration-article1,
+  .inspiration-article2,
+  .inspiration-article3 {
+    width: 270px;
+    height: 260px;
+  }
+  .inspiration-article1 p,
+  .inspiration-article2 p,
+  .inspiration-article3 p {
+    top: 150px;
+  }
+  .inspiration-article3 h2 {
+    bottom:20px;
+  }
 }
 
 .popular-hotels-section {
   position: relative;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-bottom: 60px;
 }
 
@@ -381,6 +718,7 @@ a {
   height: 300px;
   flex-shrink: 0;
   border-radius: 8px;
+  margin-right: 10px;
 }
 .popular-hotels-section h2 {
   margin-top: 12px;
@@ -391,20 +729,29 @@ a {
   margin-top: 4px;
   color: var(--headingTextColor);
   font-weight: 500;
+  margin-bottom: 20px;
 }
-
+@media (max-width: 685px) and (min-width: 550px) {
+  .popular-section-article1 img,
+  .popular-section-article2 img,
+  .popular-section-article3 img,
+  .popular-section-article4 img {
+    width: 505px;
+    height: 400px;
+  }
+}
 .down-banner {
   position: relative;
   background-image: url(imgs/downBanner.jpeg);
   background-size: cover;
   height: 280px;
   border-radius: 8px;
-  margin-bottom: 80px;
+  margin-bottom: 100px;
 }
 
 .down-banner h1 {
   position: absolute;
-  width: 580px;
+  width: 500px;
   color: var(--whiteColor);
   font-size: 28px;
   font-weight: 700;
@@ -437,12 +784,34 @@ a {
   left: 0;
   mix-blend-mode: overlay;
 }
+@media (max-width: 900px) {
+  .down-banner h1 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 750px) {
+  .down-banner h1 {
+    font-size: 22px;
+    width: 320px;
+  }
+}
+@media (max-width: 600px) {
+  .down-banner h1 {
+    left: 30px;
+    font-size: 22px;
+    width: 320px;
+  }
+  .down-banner button {
+    left: 30px;
+  }
+}
 
 .explore-dream-place {
   margin-bottom: 80px;
   margin-right: 50%;
   transform: translate(50%, -50%);
   text-align: center;
+  line-height: 200%;
 }
 
 .explore-dream-place h1 {
@@ -459,6 +828,7 @@ a {
 .footer {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .footer ul {
   list-style: none;
@@ -507,13 +877,24 @@ a {
   position: absolute;
   display: inline;
   top: 10px;
-  left: 1105px;
+  left: 30px;
   font-size: 14px;
   color: #4f4f4f;
+  width: 700px;
 }
 
 .under-footer svg {
   position: absolute;
   top: 14px;
-  left: 1083px;
+  left: 10px;
+}
+.container-down-banner {
+  /* to make padding works even in mobile size screens */
+  /* to set all elements in the center verticlly */
+  margin-right: auto;
+  margin-left: auto;
+  /* set the width for the container */
+  width: 100%;
+}
+@media {
 }
