--- a/style.css
+++ b/style.css
@@ -1,41 +1,3 @@
-/* responsive devices  */
-/* 1528 */
-/* Smallocation-input-search*/
-/* @media (max-width: 768px) {
-  .main-container {
-    width: 750px;
-  }
-  .choose-country-section,
-  .inspiration-section,
-  .popular-hotels-section {
-    flex-wrap: wrap;
-  }
-  .search-place-nav {
-    width: 280px;
-  }
-} */
-
-/* width: 1046.8px; */
-/* Medium */
-/* @media (max-width: 992px) {
-  .main-container {
-    width: 970px;
-  }
-  .choose-country-section,
-  .inspiration-section,
-  .popular-hotels-section {
-    flex-wrap: wrap;
-  }
-  .search-place-nav {
-    width: 500px;
-  }
-} */
-/* Large */
-
-/* end of responsive */
-
-/* navigation bar styling */
-
 :root {
   --mainColor: #2f80ed;
   --textColor: #333;
@@ -80,11 +42,7 @@ h4 {
   width: calc(100% - 200px);
 }
 
-@media (max-width: 900px) {
-  .main-container {
-    width: 100%;
-  }
-}
+
 /* navigation bar styling */
 .nav-logo {
   position: relative;
@@ -145,14 +103,7 @@ a {
   align-items: center;
   margin-bottom: 12px;
 }
-@media (max-width: 1017px) {
-  .nav-links {
-    display: none;
-  }
-  .nav-logo {
-    left: 30px;
-  }
-}
+
 
 .sidebar {
   position: absolute;
@@ -175,14 +126,10 @@ a {
   font-size: 24px;
   border-radius: 0;
   color: var(--lightGrayText);
-  margin-top: 17px;
+  /* margin-top: 17px; */
   /* display: none;  */
 }
-@media (min-width: 1017px) {
-  .sidebar-burger-menu {
-    display: none;
-  }
-}
+
 
 .left-arrow,
 .right-arrow,
@@ -280,19 +227,7 @@ a {
   top: 410px;
   display: none;
 }
-@media (max-width: 500px) {
-  .sign-in-sidebar,
-  .register-sidebar {
-    display: block;
-  }
-  .sign-in-btn,
-  .register-btn {
-    display: none;
-  }
-  .nav-logo {
-    right: 0;
-  }
-}
+
 /* start of banner */
 .banner-section {
   position: relative;
@@ -355,32 +290,12 @@ a {
   margin: 0;
 }
 
-@media (max-width: 900px) {
-  .banner-qoute {
-    top: 160px;
-    width: 60%;
-    font-size: 20px;
-    top: 200px;
-  }
-  .banner-section h1 {
-    top: 92px;
-    font-size: 26px;
-    left: 55%;
-  }
-}
-@media (max-width: 450px) {
-  .banner-section {
-    height: 300px;
-  }
-  .banner-qoute {
-    width: 80%;
-    font-size: 16px;
-    top: 55%;
-  }
-  .banner-section h1 {
-    font-size: 20px;
-    width: 236px;
-  }
+
+
+.search-nav-container {
+  margin-right: auto;
+  margin-left: auto;
+  width: calc(100% - 200px);
 }
 .search-place-nav {
   position: relative;
@@ -393,7 +308,24 @@ a {
   /* margin-left: 50%; */
   /* transform:translate(-50%,0%); */
   margin-top: -32px;
+  /* display: flex; */
   /* display: none; */
+}
+.search-place-form {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  width: calc(100% - 250px);
+  right: 60%;
+  top: 50%;
+  transform: translate(50%, -50%);
+}
+
+.search-nav-container2 {
+  margin-right: auto;
+  margin-left: auto;
+  width: calc(100% - 500px);
+  display: none;
 }
 .search-place-nav-responsive {
   position: relative;
@@ -415,67 +347,16 @@ a {
   align-items: center;
   width: calc(100% - 30px);
   right: 50%;
-  top: 50%;
+  top: 40%;
   transform: translate(50%, -50%);
 }
-.search-nav-container {
-  margin-right: auto;
-  margin-left: auto;
-  width: calc(100% - 200px);
-}
-.search-nav-container2 {
-  margin-right: auto;
-  margin-left: auto;
-  width: calc(100% - 500px);
-}
-.search-place-form {
-  position: absolute;
+.search-place-nav-responsive {
   display: flex;
-  justify-content: space-between;
-  width: calc(100% - 30px);
-  right: 50%;
-  top: 50%;
-  transform: translate(50%, -50%);
-}
-@media (max-width: 1500px) {
-  .search-place-form input {
-    width: 90%;
-  }
-}
-@media (max-width: 1075px) {
-  .search-place-form input {
-    width: 80%;
-  }
-  .search-nav-container {
-    width: 100%;
-  }
-  .search-place-form p {
-    font-size: 8px;
-  }
-}
-@media (max-width: 900px) {
-  .search-place-nav {
-    display: none;
-  }
-  .search-place-nav-responsive {
-    display: block;
-  }
-}
-@media (max-width: 450px) {
-  .search-place-nav-responsive {
-    width: 250px;
-    height: 250px;
-  }
-  .search-place-form-responsive input {
-    width: 120px;
-    height: 20px;
-  }
-  .search-place-form-responsive {
-    gap: -20px;
-  }
+  flex-direction: column;
 }
 
-.search-nav-btn {
+.search-nav-btn1,
+.search-nav-btn2 {
   background-color: var(--mainColor);
   color: var(--whiteColor);
   display: flex;
@@ -487,7 +368,21 @@ a {
   gap: 10px;
   border-radius: 6px;
   border-color: transparent;
+  position: absolute;
 }
+
+.search-nav-btn1 {
+  right: 50%;
+  top: 90%;
+  transform: translate(50%, -50%);
+}
+.search-nav-btn2 {
+  right: 10%;
+  top: 50%;
+  transform: translate(50%, -50%);
+}
+
+
 .search-place-nav button p {
   font-size: 15px;
   font-weight: 600;
@@ -532,11 +427,7 @@ a {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-@media (max-width: 450px) {
-  .covid-restrictions-warning {
-    height: 100px;
-  }
-}
+
 .warning-covid-icon {
   position: absolute;
   top: 20px;
@@ -570,12 +461,7 @@ a {
   font-weight: 500;
   width: 638px;
 }
-@media (max-width: 685px) {
-  .section1-enjoy-vacation p {
-    width: 500px;
-    line-height: 150%;
-  }
-}
+
 .choose-country-section {
   display: flex;
   justify-content: space-between;
@@ -608,12 +494,7 @@ a {
   color: var(--headingTextColor);
   font-weight: 500;
 }
-@media (max-width: 685px) and (min-width: 550px) {
-  .choose-country-section-article-img {
-    width: 430px;
-    height: 350px;
-  }
-}
+
 
 .inspiration-section {
   display: flex;
@@ -677,30 +558,7 @@ a {
   top: 216px;
   left: 20px;
 }
-@media (max-width: 685px) and (min-width: 550px) {
-  .inspiration-article1,
-  .inspiration-article2,
-  .inspiration-article3 {
-    width: 473px;
-    height: 340px;
-  }
-}
-@media (max-width: 450px) {
-  .inspiration-article1,
-  .inspiration-article2,
-  .inspiration-article3 {
-    width: 270px;
-    height: 260px;
-  }
-  .inspiration-article1 p,
-  .inspiration-article2 p,
-  .inspiration-article3 p {
-    top: 150px;
-  }
-  .inspiration-article3 h2 {
-    bottom:20px;
-  }
-}
+
 
 .popular-hotels-section {
   position: relative;
@@ -731,15 +589,7 @@ a {
   font-weight: 500;
   margin-bottom: 20px;
 }
-@media (max-width: 685px) and (min-width: 550px) {
-  .popular-section-article1 img,
-  .popular-section-article2 img,
-  .popular-section-article3 img,
-  .popular-section-article4 img {
-    width: 505px;
-    height: 400px;
-  }
-}
+
 .down-banner {
   position: relative;
   background-image: url(imgs/downBanner.jpeg);
@@ -784,27 +634,7 @@ a {
   left: 0;
   mix-blend-mode: overlay;
 }
-@media (max-width: 900px) {
-  .down-banner h1 {
-    font-size: 24px;
-  }
-}
-@media (max-width: 750px) {
-  .down-banner h1 {
-    font-size: 22px;
-    width: 320px;
-  }
-}
-@media (max-width: 600px) {
-  .down-banner h1 {
-    left: 30px;
-    font-size: 22px;
-    width: 320px;
-  }
-  .down-banner button {
-    left: 30px;
-  }
-}
+
 
 .explore-dream-place {
   margin-bottom: 80px;
@@ -880,7 +710,7 @@ a {
   left: 30px;
   font-size: 14px;
   color: #4f4f4f;
-  width: 700px;
+  width: 140px;
 }
 
 .under-footer svg {
@@ -896,5 +726,4 @@ a {
   /* set the width for the container */
   width: 100%;
 }
-@media {
-}
+
