--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ a {
 /* start of banner */
 .banner-section {
   position: relative;
-  background-image: url(imgs/banner2.png);
+  background-image: url(imgs/banner2.jpg);
   background-size: cover;
   background-repeat: round;
   height: 500px;
@@ -510,7 +510,7 @@ a {
 }
 
 .inspiration-article1 {
-  background-image: url(imgs/section2-article1.jpeg);
+  background-image: url(imgs/section2-article1.jpg);
 }
 .inspiration-article2 {
   background-image: url(imgs/article2-section2.png);
@@ -536,16 +536,15 @@ a {
 .inspiration-article3 .overlay {
   border-radius: 8px;
 }
+
 .inspiration-section h2 {
   top: 50%;
-}
-.inspiration-section h2 {
   position: absolute;
   bottom: 72px;
   left: 20px;
   color: var(--whiteColor);
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: normal;
 }
 
@@ -592,7 +591,7 @@ a {
 
 .down-banner {
   position: relative;
-  background-image: url(imgs/downBanner.jpeg);
+  background-image: url(imgs/downBanner.jpg);
   background-size: cover;
   height: 280px;
   border-radius: 8px;
