--- a/style.css
+++ b/style.css
@@ -31,10 +31,10 @@ h3,
 h4 {
   color: var(--headingTextColor);
 }
-button{
+button {
   cursor: pointer;
 }
-.main-container-home {
+.main-container-home, .main-container-search-results {
   /* to make padding works even in mobile size screens */
   padding-right: 20px;
   padding-left: 20px;
@@ -298,25 +298,26 @@ a:hover {
 }
 
 .search-nav-container {
-  margin-right: auto;
-  margin-left: auto;
   width: calc(100% - 200px);
 }
-.search-place-nav {
+.search-nav-container,
+.search-results-nav-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+.search-place-nav,
+.search-results-place-nav {
   position: relative;
-  /* width: 1072.8px; */
   height: 64px;
   flex-shrink: 0;
   border-radius: 8px;
   background: var(--whiteColor);
   box-shadow: 0px 4px 37px 0px rgba(0, 0, 0, 0.15);
-  /* margin-left: 50%; */
-  /* transform:translate(-50%,0%); */
   margin-top: -32px;
-  /* display: flex; */
-  /* display: none; */
 }
-.search-place-form {
+
+.search-place-form,
+.search-results-place-form {
   position: absolute;
   display: flex;
   justify-content: space-between;
@@ -690,7 +691,8 @@ input:focus {
   margin-bottom: 20px;
 }
 
-.logo-title {
+.logo-title,
+.logo-search-results-page {
   position: absolute;
   display: inline;
   left: 30px;
@@ -824,7 +826,7 @@ input:focus {
 .sign-up-button:hover,
 .sign-in-button:hover,
 .forgot-pw-button:hover,
-.back-to-sign-inbox-button:hover{
+.back-to-sign-inbox-button:hover {
   background-color: #004eb4;
   cursor: pointer;
 }
@@ -1052,4 +1054,478 @@ input:focus {
 .we-sent-email {
   margin-top: 15px;
   margin-bottom: 40px;
+}
+
+/*  */
+/*  */
+/*  */
+/* start of search results page */
+/*  */
+/*  */
+/*  */
+.header-loged-in {
+  background: linear-gradient(180deg, #2969bf 0%, #144e9d 100%);
+  height: 200px;
+  z-index: -1;
+}
+.header-loged-in-nav {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 12px;
+}
+.logo-search-results-page {
+  color: white;
+}
+.header-loged-in-nav .nav-links p,
+a {
+  color: white;
+}
+.header-nav .nav-links p,
+a {
+  color: var(--textColor);
+}
+
+.notifications-profile-photo {
+  display: flex;
+}
+.notifications-icon {
+  margin-top: 10px;
+  margin-right: 22px;
+}
+.user-profile-photo-nav {
+  width: 44px;
+  height: 44px;
+  flex-shrink: 0;
+  border-radius: 44px;
+}
+.header-loged-in-nav .nav-logo {
+  margin-top: 9px;
+}
+.header-loged-in-nav .nav-links {
+  margin-top: 9px;
+}
+
+.search-results-nav-container {
+  width: 1030px;
+}
+
+.main-container-search-results {
+  display: flex;
+  margin-top: 70px;
+}
+.aside-container {
+  width: 295px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.search-filter-aside {
+  position: relative;
+  width: 295px;
+  height: 119px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  background: var(--Gray-6, #f2f2f2);
+}
+.search-filter-aside h3 {
+  position: absolute;
+  color: var(--headingTextColor);
+  font-size: 16px;
+  left: 18px;
+  top: 20px;
+}
+
+.search-filter-aside input {
+  position: absolute;
+  display: flex;
+  width: 259px;
+  padding: 11px 12px 12px 12px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: #fff;
+  left: 18px;
+  top: 55px;
+}
+
+.filter-by-text-aside {
+  color: var(--Gray-1, #333);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.36px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 18px;
+}
+
+.your-budget-box,
+.popular-filters-box,
+.activities-filters-box {
+  height: 348px;
+  border-radius: 6px;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: #fff;
+  margin-bottom: 20px;
+}
+
+.budget-box-title,
+.ratng-box-title,
+.popular-filters-title,
+.activities-filters-title {
+  display: flex;
+  width: 294px;
+  padding: 18px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 6px 6px 0px 0px;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: var(--Gray-6, #f2f2f2);
+}
+.budget-box-title h3,
+.ratng-box-title h3,
+.popular-filters-title h3,
+.activites-filters-title h3 {
+  color: var(--headingTextColor);
+  font-size: 16px;
+}
+
+.checkbox {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  border: 1px solid var(--Gray-4, #bdbdbd);
+  border-radius: 5px;
+  background: #fff;
+  margin-top: 18px;
+  /* margin-left: 18px; */
+  margin-right: 8px;
+  position: relative;
+  /* display: inline-block; */
+  top: 4px;
+}
+.label {
+  color: #333;
+}
+.flex-prices-checkbox,
+.flex-popular-filters-checkbox,
+.flex-activities-filters-checkbox {
+  display: flex;
+  justify-content: space-around;
+}
+.filter-price-checkboxs,
+.popular-filters-checkboxs,
+.activities-filters-checkboxs {
+  display: flex;
+  flex-direction: column;
+}
+.number-of-price-rooms {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 18px;
+}
+
+.toogle-text-budget {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.rating-box {
+  width: 295px;
+  height: 170px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: #fff;
+  margin-bottom: 20px;
+}
+
+.rating-box p {
+  color: var(--textColor);
+  font-size: 14px;
+  font-weight: 500;
+  margin-left: 18px;
+  margin-top: 20px;
+}
+
+.rating-from-one-to-five {
+  display: flex;
+  margin-top: 8px;
+  margin-left: 18px;
+}
+
+.rating-one,
+.rating-five {
+  width: 50px;
+  height: 46px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: #fff;
+}
+.rating-one {
+  border-radius: 5px 0px 0px 5px;
+}
+.rating-five {
+  border-radius: 0px 5px 5px 0px;
+}
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 46px;
+  flex-shrink: 0;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: #fff;
+}
+/* end of aside style */
+
+.results-home-container {
+  width: 915px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.results-home-container h1 {
+  margin-bottom: 24px;
+}
+
+.sort-by-options-rectangle {
+  display: flex;
+}
+
+.our-top-picks-box,
+.hotel-and-apartments-box,
+.residence-box,
+.resort-box,
+.shared-space-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid var(--mainColor);
+  padding: 10px 18px;
+}
+.our-top-picks-box {
+  border-radius: 6px 0px 0px 6px;
+  color: var(--mainColor);
+  /* background-color: ; */
+  background: rgba(47, 128, 237, 0.05);
+}
+.shared-space-box {
+  border-radius: 0px 6px 6px 0px;
+}
+/* end of aside styling */
+.sort-results-by {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 24px;
+}
+
+.dropdown-sortby {
+  position: relative;
+  display: flex;
+  width: 190px;
+  padding-left: 12px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  align-items: center;
+  border-radius: 6px;
+  border: 1px solid var(--Gray-4, #bdbdbd);
+  background: #fff;
+  appearance: none;
+}
+.sort-by-dropdown::before {
+  content: "";
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent red transparent;
+  position: absolute;
+  right: 5px;
+  top: -20px;
+}
+
+.sort-by-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.hotel-card {
+  width: 915px;
+  height: 240px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: #fff;
+}
+
+.hotel-card {
+  position: relative;
+  margin-bottom: 24px;
+}
+.image-hotel-card {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 285px;
+  height: 200px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background-size: cover no-repeat;
+}
+
+.hotel-card-title {
+  position: absolute;
+  left: 328px;
+  top: 24px;
+  color: #1a1a1a;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.five-stars {
+  display: flex;
+  position: absolute;
+  left: 327px;
+  top: 63px;
+}
+
+.five-stars p {
+  margin-left: 12px;
+  font-size: 14px;
+}
+
+.box-for-book-now-offer,
+.restaurant-discount-offer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: white;
+  padding: 4px 8px;
+  right: 24px;
+  top: 24px;
+  border-radius: 6px;
+}
+.box-for-book-now-offer {
+  background-color: #eb5757;
+}
+.restaurant-discount-offer {
+  background-color: #f2994a;
+}
+.box-for-book-now-offer p,
+.restaurant-discount-offer p {
+  font-size: 14px;
+}
+
+.box-for-price-offer {
+  color: white;
+  display: inline-flex;
+  padding: 4px 8px;
+  position: absolute;
+  top: 114px;
+  right: 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: var(--Green-1, #219653);
+}
+
+.hotel-card-desc1,
+.hotel-card-desc2 {
+  position: absolute;
+
+  color: #4f4f4f;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 18.2px */
+  letter-spacing: 0.26px;
+}
+
+.hotel-card-desc1 {
+  top: 100px;
+  left: 328px;
+}
+.hotel-card-desc2 {
+  width: 360px;
+  font-weight: 500;
+  top: 122px;
+  left: 328px;
+}
+
+.rooms-number-text {
+  position: absolute;
+  top: 146px;
+  right: 24px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #333;
+}
+
+.price-text {
+  position: absolute;
+  top: 169px;
+  right: 24px;
+}
+.before-offer-text {
+  color: #eb5757;
+  font-size: 14px;
+  font-weight: 600;
+  text-decoration-line: line-through;
+}
+.after-offer-text {
+  color: #333;
+  font-size: 20px;
+  font-weight: 600;
+}
+.taxes-text {
+  font-size: 14;
+  position: absolute;
+  top: 199px;
+  right: 24px;
+}
+
+.see-availability-btn {
+  position: absolute;
+  top: 176px;
+  left: 329px;
+  display: inline-flex;
+  padding: 10px 18px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: var(--Blue-1, #2f80ed);
+  border-color: transparent;
+  color: white;
+}
+
+.load-more-btn {
+  display: inline-flex;
+  padding: 10px 18px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: rgba(47, 128, 237, 0.1);
+  color: var(--mainColor);
+  border: transparent;
+  margin-left: 50%;
+  transform: translate(-50%);
+}
+
+.covid-footer-container{
+  width: 1240px;
+  margin-right: auto;
+  margin-left: auto;
 }
